--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -971,42 +971,37 @@ bit[ ] & CRAM record N & The Nth CRAM record \tabularnewline
 The relationship between the core data block and external data blocks is shown in the following 
 picture: 
 
+\begin{center}
 \begin{tikzpicture}
 
-
-
-\usetikzlibrary{shapes, shadows, positioning, arrows, decorations.markings}
+\usetikzlibrary{shapes, shadows, positioning, arrows,  decorations.markings}
 
 \pgfdeclarelayer{background}
 \pgfsetlayers{background,main}
 
 \tikzstyle{dsbox} = [blockbox, text width=6em, minimum width=6em, minimum height=3em, rounded corners, drop shadow]
 \tikzstyle{blockbox}=[draw, fill=white, text width=4.0em, text centered, minimum height=1.0em, drop shadow]
+\tikzstyle{encodedblocklarge} = [blockbox, text width=6em, minimum width=8em, minimum height=4em, drop shadow]
 \tikzstyle{encodedblock} = [blockbox, text width=6em, minimum width=8em, minimum height=3em, drop shadow]
 
 \tikzstyle{texto} = [above, text width=8em, text centered]
- 
-\tikzstyle{encodingArrow} = [thick, decoration={markings, mark=at position
-   1 with {\arrow[semithick]{open triangle 60}}},
-   double distance=3.0pt, shorten >= 5.0pt,
-   preaction = {decorate},
-   postaction = {draw, line width=1.4pt, white, shorten >= 5.0pt}]
-\tikzstyle{innerWhite} = [semithick, white, line width=1.4pt, shorten >= 4.5pt]
 
 \newcommand{\cramRecord}[6]{%
 \begin{pgfonlayer}{background}
-    \path (#1.west |- #1.north)+(-0.5,0.5) node (a1) {};
-    \path (#1.east |- #6.south)+(+0.5,-0.25) node (a2) {};
+    \path (#1.west |- #1.north) + (-0.5, 0.5) node (a1) {};
+    \path (#1.east |- #6.south) + (+0.5,-0.25) node (a2) {};
     \path[fill=brown!10,rounded corners, draw=black!50, dashed]
       (a1) rectangle (a2);
-    \path (a1.east |- a1.south)+(1.0,-0.3) node[texto]
-      {\scriptsize\textit{CRAM Record}};
+    \path (a1.east |- a1.south) + (1.0,-0.3) node[texto]
+      {\scriptsize\textbf{CRAM Record}};
 \end{pgfonlayer}}
 
 \newcommand{\dsbox}[2]{node (p#1) [dsbox]
-   {\scriptsize\textit{#2}}}
+{\scriptsize{#2}}}
 \newcommand{\encodedblock}[2]{node (p#1) [encodedblock]
-   {\scriptsize\textit{#2}}}
+	{\scriptsize{#2}}}
+\newcommand{\encodedblocklarge}[2]{node (p#1) [encodedblocklarge]
+   {\scriptsize{#2}}}
 
 \path +(-2.5,-1.5) \dsbox{1}{Bit Flags};
 \path (p1.south)+(0.0,-1.0) \dsbox{2}{Alignment Start};
@@ -1017,47 +1012,37 @@ picture:
 
 \cramRecord{p1}{p2}{p3}{p4}{p5}{p6}
 
-\newcommand{\blocks}[4]{%
+\newcommand{\blockStreams}[4]{%
 \begin{pgfonlayer}{background}
-    \path (#1.west |- #1.north)+(-0.5,0.5) node (a1) {};
-    \path (#1.east |- #1.south)+(+0.5,-0.25) node (a2) {};
-    \path (#2.west |- #2.north)+(-0.5,0.5) node (a3) {};
-    \path (#4.east |- #4.south)+(+0.5,-0.25) node (a4) {};
+    \path (#1.west |- #1.north)+(-0.5, .7) node (a1) {};
+    \path (#1.east |- #1.south)+(+0.5, -0.25) node (a2) {};
+    \path (#2.west |- #2.north)+(-0.5, 0.5) node (a3) {};
+    \path (#4.east |- #4.south)+(+0.5, -0.25) node (a4) {};
     \path[fill=yellow!10, rounded corners, draw=black!50, dashed]
       (a1) rectangle (a2);
-   \path[fill=yellow!10, rounded corners, draw=black!50, dashed]
+    \path (a1.east |- a1.south)+(0.8,-0.3) node[texto]
+      {\scriptsize\textbf{Bit Stream}};
+    \path[fill=yellow!10, rounded corners, draw=black!50, dashed]
       (a3) rectangle (a4);
-   \path (a1.east |- a1.south)+(0.8,-0.3) node[texto]
-      {\scriptsize\textit{Bit Stream}};
-   \path (a3.east |- a3.south)+(0.8,-0.3) node[texto]
-      {\scriptsize\textit{Byte Streams}};
+    \path (a3.east |- a3.south)+(1.0,-0.3) node[texto]{\scriptsize\textbf{Byte Streams}};
 \end{pgfonlayer}}
 
-\path (a1.south)+(10.0,-1.0) \encodedblock{7}{Core Data Block};
-\path (p7.south)+(0.0,-2.5) \encodedblock{8}{External Data Block};
-\path (p8.south)+(0.0,-1.0) \encodedblock{9}{External Data Block};
-\path (p9.south)+(0.0,-1.0) \encodedblock{10}{External Data Block...};
+\path (a1.south) + (12.0, -2.3) \encodedblocklarge {7} {Core Data Block};
+\path (p7.south) + (0.0, -2.0) \encodedblock {8} {External Data Block};
+\path (p8.south) + (0.0, -1.0) \encodedblock {9} {External Data Block}; 
+\path (p9.south) + (0.0, -1.0) \encodedblock {10}{External Data Block...};
 
-\blocks{p7}{p8}{p9}{p10}
+\blockStreams {p7} {p8} {p9} {p10}
 
-\draw[encodingArrow] (p1) + (1.7, -0.0) to (p7);
-\draw[encodingArrow] (p3) + (1.7, 0.0) to (p8);
-\draw[encodingArrow] (p4) + (1.7, 0.0) to (p9);
-\draw[encodingArrow] (p5) + (1.7, 0.0) to (p10);
+\node[minimum size=4cm, right = of p2, single arrow, draw, single arrow head indent=0ex, black] {Bit encodings (Huffman, ...) };
 
-\filldraw[draw=black, fill=white!10, drop shadow] (1.5, -1.5) ellipse (2.0 and 0.5);
-\filldraw[draw=black, fill=white!10, drop shadow] (1.5, -4.55) ellipse (1.8 and 0.5);
-\filldraw[draw=black, fill=white!10, drop shadow] (1.5, -6.1) ellipse (1.8 and 0.5);
-\filldraw[draw=black, fill=white!10, drop shadow] (1.5, -7.6) ellipse (1.8 and 0.5);
-
-\node [right=of p1, scale=0.7, text centered, text width=14em] {Core (Bit) Encodings (Huffman, RANS, etc.)};
-\node [right=of p3, scale=0.7, text centered, text width=14em] {External (Byte) Encodings};
-\node [right=of p4, scale=0.7, text centered, text width=14em] {External (Byte)  Encodings};
-\node [right=of p5, scale=0.7, text centered, text width=14em] {External (Byte)  Encodings};
+\node[minimum size=4cm, right = of p5, single arrow, draw, single arrow head indent=0ex, black] {Byte encodings (external, ...) };
 
 \end{tikzpicture}
 
 Figure 5: The relationship between core and external encodings, and core and external data blocks.
+
+\end{center}
 
 The picture shows how a CRAM record (on the left) is distributed between the core 
 data block and one or more external data blocks, via core or external encodings. The specific 
