--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -175,7 +175,7 @@ Possible Types for FORMAT fields are: Integer, Float, Character, and String (thi
 \subsubsection{Alternative allele field format}
 Symbolic alternate alleles are described as follows:
 \begin{verbatim}
-##ALT=<ID=type,Description=description>
+##ALT=<ID=type,Description="description">
 \end{verbatim}
 
 \noindent \textbf{Structural Variants} \newline
