Updated in-document change log

--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -2102,6 +2102,9 @@ Therefore, also \#\#PEDIGREE newly requires a unique ID.
 \item Chromosome names cannot use reserved symbolic alleles and contain characters used by breakpoints (Section~\ref{sec-contig-field}).
 \item IUPAC ambiguity codes should be converted to a concrete base.
 \item Symbolic ALTs for IUPAC codes.
+\item Made SVTYPE mandatory for SVs.
+\item Top-level SVTYPE values are explicitly restricted to the 6 defined in the specifications.
+\item Reserved some SVTYPE subtypes.
 \end{itemize}
 
 \subsection{Changes between BCFv2.1 and BCFv2.2}
