need to fix link to artifact as there has been some change in circleCI recently

--- a/VCFv4.1.tex
+++ b/VCFv4.1.tex
@@ -21,6 +21,7 @@ last modified on the date shown above.
 \section{The VCF specification}
 VCF is a text file format (most likely stored in a compressed manner). It contains meta-information lines, a header line, and then data lines each containing information about a position in the genome.
 The format also has the ability to contain genotype information on samples for each position.
+TESTING123123
 \subsection{An example}
 \scriptsize
 \begin{verbatim}
